--- a/Mekala_Saketh_Reddy_Assignment_3_1.ipynb
+++ b/Mekala_Saketh_Reddy_Assignment_3_1.ipynb
@@ -705,7 +705,7 @@
       },
       "outputs": [],
       "source": [
-        "# Type your answer"
+        "# challenging and getting more knowledge, and improving day by day"
       ]
     }
   ],
